# projects-ia-house-price-prediction

./: .coverage  .coveragerc  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml  pytest.ini  requirements.txt
app/: main.py  model.py  schemas.py  views.py
data/: ANALISE_DADOS_ML.md  README.md  house_prices.csv  rascunho.ipynb
tests/: __init__.py  test_main.py  test_model.py  test_schemas.py  test_views.py
