[tool.poetry]
name = "house-price-prediction"
version = "0.1.0"
description = "House Price Prediction Service"
authors = ["Seu Nome <seu.email@example.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.116.0"
uvicorn = "^0.35.0"
pydantic = "^2.11.0"
numpy = "^1.24.0"
pandas = "^2.0.0"
matplotlib = "^3.7.0"
scikit-learn = "^1.3.0"
scipy = "^1.11.0"
alembic = "^1.14.0"
python-dotenv = "^1.0.0"
python-dateutil = "^2.9.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
coverage = "^7.3.0"
httpx = "^0.25.0"
pytest-asyncio = "^0.21.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api" 